--- a/docs/layouts/default.html
+++ b/docs/layouts/default.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }} | {{ site.title }}</title>
+    <title>{{ page.title }}</title>
 </head>
 <body>
-    <header>
-        <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-    </header>
-    <main>
-        {{ content }}
-    </main>
+    {{ content }}
 </body>
 </html>
